button component eklendi

--- a/src/app/musteri-detay/musteri-detay.component.scss
+++ b/src/app/musteri-detay/musteri-detay.component.scss
@@ -9,25 +9,25 @@
 }
 
 
-.panel{
-  border-radius: 0;
-  box-shadow: none;
-  border: 1px solid transparent;
-}
-
-.panel-benim{
-  border: 1px solid #e1e8ed;
-  & .panel-heading{
-    border-bottom: 1px solid #e1e8ed;
-  }
-
-  & .panel-title{
-    & span{
-      color: #6b6b6b;
-      font-size: 14px;
-    }
-  }
-}
+//.panel{
+//  border-radius: 0;
+//  box-shadow: none;
+//  border: 1px solid transparent;
+//}
+//
+//.panel-benim{
+//  border: 1px solid #e1e8ed;
+//  & .panel-heading{
+//    border-bottom: 1px solid #e1e8ed;
+//  }
+//
+//  & .panel-title{
+//    & span{
+//      color: #6b6b6b;
+//      font-size: 14px;
+//    }
+//  }
+//}
 
 
 
