--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -4,14 +4,8 @@
       <li><a routerLink="/anasayfa"><i class="fa fa-home"></i><span>Anasayfa</span></a></li>
       <li><a routerLink="/araclar"><i class="fa fa-car"></i><span>Araçlar</span></a></li>
       <li  class="active"><a routerLink="/musteriler"><i class="fa fa-address-book"></i><span>Müşteriler</span></a></li>
-      <li><a routerLink="/calisanlar"><i class="fa fa-users"></i><span>Çalışanlar</span></a></li>
-      <li><a routerLink="/harcamalar"><i class="fa fa-sign-out"></i><span>Harcamalar</span></a></li>
-      <li><a routerLink="/hesaplar"><i class="fa fa-bank"></i><span>Kasa ve Bankalar</span></a></li>
-      <li><a routerLink="/raporlar"><i class="fa fa-pie-chart"></i><span>Raporlar</span></a></li>
-      <li><a routerLink="/ayarlar"><i class="fa fa-gear"></i><span>Ayarlar</span></a></li>
-      <li><a routerLink="/subeler"><i class="fa fa-bank"></i><span>Şubeler</span></a></li>
-      <li><a routerLink="/kategoriler"><i class="fa fa-hashtag"></i><span>Kategoriler</span></a></li>
-      <li><a routerLink="/ekstravehizmetler"><i class="fa fa-legal"></i><span>Ekstralar & Hizmetler</span></a></li>
+      <li><a routerLink="/panel"><i class="fa fa-hashtag"></i><span>Panel</span></a></li>
+      <li><a routerLink="/button"><i class="fa fa-hashtag"></i><span>Button</span></a></li>
     </ul>
   </div>
 </div>
