--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,16 @@
 @import "app/anasayfa/anasayfa.component.scss";
 @import "app/araclar/araclar.component.scss";
 @import "app/header/header.component.scss";
+
 @import "app/musteriler/musteriler.component.scss";
+
 @import "app/solmenu/solmenu.component.scss";
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500&subset=cyrillic-ext');
 @import "scss/font-size";
 @import "app/musteri-detay/musteri-detay.component.scss";
+
+/* Panel */
+@import "scss/Panel/Panel.scss";
 body{
   font-family: 'Roboto', sans-serif;
   font-size:14px;
