--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,8 @@
 
 /* Panel */
 @import "scss/Panel/Panel.scss";
+/* Button */
+@import "scss/Button/Button";
 body{
   font-family: 'Roboto', sans-serif;
   font-size:14px;
