btn-delete ve btn-default-none

--- a/src/app/Button/button.component.html
+++ b/src/app/Button/button.component.html
@@ -24,13 +24,13 @@
 <div class="container-fluid m-l-230 m-t-15">
   <div class="row">
 
-    <div class="col-md-12">
+    <div class="col-md-6">
       <div class="panel panel-light">
         <!-- Panel Heading -->
         <div class="panel-heading">
           <!-- Panel Left Block -->
           <div class="panel-heading-left-block">
-            <span >Müşteri Detay </span>
+            <span> Button </span>
           </div>
           <!-- Panel Heading Left Block -->
           <!-- Panel Heading Right Block -->
@@ -42,9 +42,29 @@
         </div>
         <!-- Panel Heading -->
         <div class="panel-body">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque dolor ea esse facilis nemo nisi nulla possimus quam quo sequi! Cumque dolor ducimus expedita nihil recusandae rem repudiandae sint voluptas?
-          </p>
+          <div class="row">
+            <!-- Btn Delete -->
+            <div class="col-md-12">
+              <a href="javascript:void(0)" class="btn btn-delete btn-xs">Delete</a>
+              <a href="javascript:void(0)" class="btn btn-delete btn-sm">Delete</a>
+              <a href="javascript:void(0)" class="btn btn-delete btn-md">Delete</a>
+              <a href="javascript:void(0)" class="btn btn-delete btn-lg">Delete</a>
+            </div>
+            <!-- Btn Delete -->
+          </div>
+
+          <div class="row m-t-15">
+            <!-- Btn Default-None -->
+            <div class="col-md-12 m-t10">
+              <a href="javascript:void(0)" class="btn btn-default-none btn-xs">Delete</a>
+              <a href="javascript:void(0)" class="btn btn-default-none btn-sm">Delete</a>
+              <a href="javascript:void(0)" class="btn btn-default-none btn-md">Delete</a>
+              <a href="javascript:void(0)" class="btn btn-default-none btn-lg">Delete</a>
+            </div>
+            <!-- Btn Default-None -->
+          </div>
+
+
         </div>
         <div class="panel-footer">
           <!-- Panel Footer Left Block -->
