--- a/src/app/Button/button.component.html
+++ b/src/app/Button/button.component.html
@@ -45,10 +45,10 @@
           <div class="row">
             <!-- Btn Delete -->
             <div class="col-md-12">
-              <a href="javascript:void(0)" class="btn btn-delete btn-xs">Delete</a>
-              <a href="javascript:void(0)" class="btn btn-delete btn-sm">Delete</a>
-              <a href="javascript:void(0)" class="btn btn-delete btn-md">Delete</a>
-              <a href="javascript:void(0)" class="btn btn-delete btn-lg">Delete</a>
+              <a href="javascript:void(0)" class="btn btn-delete btn-lg">Large</a>
+              <a href="javascript:void(0)" class="btn btn-delete btn-md">Medium</a>
+              <a href="javascript:void(0)" class="btn btn-delete btn-sm">Small</a>
+              <a href="javascript:void(0)" class="btn btn-delete btn-xs">X Small</a>
             </div>
             <!-- Btn Delete -->
           </div>
@@ -56,10 +56,21 @@
           <div class="row m-t-15">
             <!-- Btn Default-None -->
             <div class="col-md-12 m-t10">
-              <a href="javascript:void(0)" class="btn btn-default-none btn-xs">Delete</a>
-              <a href="javascript:void(0)" class="btn btn-default-none btn-sm">Delete</a>
-              <a href="javascript:void(0)" class="btn btn-default-none btn-md">Delete</a>
-              <a href="javascript:void(0)" class="btn btn-default-none btn-lg">Delete</a>
+              <a href="javascript:void(0)" class="btn btn-default-none btn-lg">Large</a>
+              <a href="javascript:void(0)" class="btn btn-default-none btn-md">Medium</a>
+              <a href="javascript:void(0)" class="btn btn-default-none btn-sm">Small</a>
+              <a href="javascript:void(0)" class="btn btn-default-none btn-xs">X Small</a>
+            </div>
+            <!-- Btn Default-None -->
+          </div>
+
+          <div class="row m-t-15">
+            <!-- Btn Default-None -->
+            <div class="col-md-12 m-t10">
+              <a href="javascript:void(0)" class="btn btn-primary btn-lg">Large</a>
+              <a href="javascript:void(0)" class="btn btn-primary btn-md">Medium</a>
+              <a href="javascript:void(0)" class="btn btn-primary btn-sm">Small</a>
+              <a href="javascript:void(0)" class="btn btn-primary btn-xs">X Small</a>
             </div>
             <!-- Btn Default-None -->
           </div>
