--- a/src/app/Button/button.component.html
+++ b/src/app/Button/button.component.html
@@ -33,12 +33,7 @@
             <span> Button </span>
           </div>
           <!-- Panel Heading Left Block -->
-          <!-- Panel Heading Right Block -->
-          <div class="panel-heading-right-block">
-            <a href="#" class="btn btn-danger btn-xs">Button 1</a>
-            <a href="#" class="btn btn-success btn-xs">Button 2</a>
-          </div>
-          <!-- Panel Right Block -->
+
         </div>
         <!-- Panel Heading -->
         <div class="panel-body">
@@ -71,6 +66,7 @@
               <a href="javascript:void(0)" class="btn btn-primary btn-md">Medium</a>
               <a href="javascript:void(0)" class="btn btn-primary btn-sm">Small</a>
               <a href="javascript:void(0)" class="btn btn-primary btn-xs">X Small</a>
+              <a href="javascript:void(0)" class="btn btn-primary btn-xs">x Deneme</a>
             </div>
             <!-- Btn Default-None -->
           </div>
