bundan sonra böyle

--- a/src/app/Button/button.component.html
+++ b/src/app/Button/button.component.html
@@ -40,36 +40,15 @@
           <div class="row">
             <!-- Btn Delete -->
             <div class="col-md-12">
-              <a href="javascript:void(0)" class="btn btn-delete btn-lg">Large</a>
-              <a href="javascript:void(0)" class="btn btn-delete btn-md">Medium</a>
-              <a href="javascript:void(0)" class="btn btn-delete btn-sm">Small</a>
-              <a href="javascript:void(0)" class="btn btn-delete btn-xs">X Small</a>
+              <button class="btn btn-default-ozel btn-lg btn-block">Button Large</button>
+              <button class="btn btn-default-ozel btn-md btn-block">Button Medium</button>
+              <button class="btn btn-default-ozel btn-sm btn-block">Button Small</button>
+              <button class="btn btn-default-ozel btn-xs btn-block">Button xSmall</button>
             </div>
             <!-- Btn Delete -->
           </div>
 
-          <div class="row m-t-15">
-            <!-- Btn Default-None -->
-            <div class="col-md-12 m-t10">
-              <a href="javascript:void(0)" class="btn btn-default-none btn-lg">Large</a>
-              <a href="javascript:void(0)" class="btn btn-default-none btn-md">Medium</a>
-              <a href="javascript:void(0)" class="btn btn-default-none btn-sm">Small</a>
-              <a href="javascript:void(0)" class="btn btn-default-none btn-xs">X Small</a>
-            </div>
-            <!-- Btn Default-None -->
-          </div>
 
-          <div class="row m-t-15">
-            <!-- Btn Default-None -->
-            <div class="col-md-12 m-t10">
-              <a href="javascript:void(0)" class="btn btn-primary btn-lg">Large</a>
-              <a href="javascript:void(0)" class="btn btn-primary btn-md">Medium</a>
-              <a href="javascript:void(0)" class="btn btn-primary btn-sm">Small</a>
-              <a href="javascript:void(0)" class="btn btn-primary btn-xs">X Small</a>
-              <a href="javascript:void(0)" class="btn btn-primary btn-xs">x Deneme</a>
-            </div>
-            <!-- Btn Default-None -->
-          </div>
 
 
         </div>
