button default özel yapıldı

--- a/src/app/Button/button.component.html
+++ b/src/app/Button/button.component.html
@@ -38,14 +38,15 @@
         <!-- Panel Heading -->
         <div class="panel-body">
           <div class="row">
-            <!-- Btn Delete -->
+
+            <!-- Btn Default Özel -->
             <div class="col-md-12">
-              <button class="btn btn-default-ozel btn-lg btn-block">Button Large</button>
-              <button class="btn btn-default-ozel btn-md btn-block">Button Medium</button>
-              <button class="btn btn-default-ozel btn-sm btn-block">Button Small</button>
-              <button class="btn btn-default-ozel btn-xs btn-block">Button xSmall</button>
+              <button class="btn btn-default-ozel btn-lg"> Defaut Large</button>
+              <button class="btn btn-default-ozel btn-md"> Defaut Medium</button>
+              <button class="btn btn-default-ozel btn-sm"> Defaut Small</button>
+              <button class="btn btn-default-ozel btn-xs"> Defaut xSmall</button>
             </div>
-            <!-- Btn Delete -->
+            <!-- Btn Default Özel -->
           </div>
 
 
