--- a/src/scss/Button/Button.scss
+++ b/src/scss/Button/Button.scss
@@ -1,1 +1,21 @@
+/* Button */
+.btn{
+  font-size: 12px;
+  &:focus{
+    box-shadow: none;
+    outline: 0px!important;
+  }
+}
 
+
+/* Btn-Default */
+.btn-default-ozel{
+  background: #ddd;
+  border:1px solid #e1e8ed;
+  &:hover{
+    box-shadow: #d3d3d3
+  }
+  &:active{
+    background-color: #f1f1f1;
+  }
+}
