button primary eklendi

--- a/src/app/Button/button.component.html
+++ b/src/app/Button/button.component.html
@@ -37,14 +37,25 @@
         </div>
         <!-- Panel Heading -->
         <div class="panel-body">
-          <div class="row">
 
+          <div class="row">
             <!-- Btn Default Özel -->
             <div class="col-md-12">
               <button class="btn btn-default-ozel btn-lg"> Defaut Large</button>
               <button class="btn btn-default-ozel btn-md"> Defaut Medium</button>
               <button class="btn btn-default-ozel btn-sm"> Defaut Small</button>
               <button class="btn btn-default-ozel btn-xs"> Defaut xSmall</button>
+            </div>
+            <!-- Btn Default Özel -->
+          </div>
+
+          <div class="row m-t-15">
+            <!-- Btn Default Özel -->
+            <div class="col-md-12">
+              <button class="btn btn-primary-ozel btn-lg"> Primary Large</button>
+              <button class="btn btn-primary-ozel btn-md"> Primary Medium</button>
+              <button class="btn btn-primary-ozel btn-sm"> Primary Small</button>
+              <button class="btn btn-primary-ozel btn-xs"> Primary xSmall</button>
             </div>
             <!-- Btn Default Özel -->
           </div>
