--- a/src/app/musteri-detay/musteri-detay.component.scss
+++ b/src/app/musteri-detay/musteri-detay.component.scss
@@ -100,20 +100,20 @@
 }
 
 
-.btn-success-ozel{
-  background: #81c784;
-  border: 1px solid #81c784;
-  color: #ffffff;
-  font-size: 13px;
-  & i{
-    margin-right: 5px;
-  }
-  &:active{
-    border: 1px solid transparent;
-    box-shadow: none;
-  }
-
-}
+//.btn-success-ozel{
+//  background: #81c784;
+//  border: 1px solid #81c784;
+//  color: #ffffff;
+//  font-size: 13px;
+//  & i{
+//    margin-right: 5px;
+//  }
+//  &:active{
+//    border: 1px solid transparent;
+//    box-shadow: none;
+//  }
+//
+//}
 
 .btn-white-ozel{
   background: #f1f1f1;
