btn danger eklendi ve diğer buttonlarda bazı değişiklikler yapıldı

--- a/src/app/musteri-detay/musteri-detay.component.scss
+++ b/src/app/musteri-detay/musteri-detay.component.scss
@@ -255,19 +255,19 @@
 }
 
 /* btn-danger-ozel */
-.btn-danger-ozel{
-  background: transparent;
-  border: 1px solid #ef5350;
-  color: #ef5350;
-  font-size: 13px;
-  & i{
-    margin-right: 5px;
-  }
-  &:active{
-    border: 1px solid transparent;
-    box-shadow: none;
-  }
-}
+//.btn-danger-ozel{
+//  background: transparent;
+//  border: 1px solid #ef5350;
+//  color: #ef5350;
+//  font-size: 13px;
+//  & i{
+//    margin-right: 5px;
+//  }
+//  &:active{
+//    border: 1px solid transparent;
+//    box-shadow: none;
+//  }
+//}
 
 
 .not-ekle-form{
