button danger outline eklendi

--- a/src/app/Button/button.component.html
+++ b/src/app/Button/button.component.html
@@ -43,7 +43,6 @@
             <div class="col-md-12">
               <button class="btn btn-default-ozel btn-lg"> Defaut Large</button>
               <button class="btn btn-default-ozel btn-md"> Defaut Medium</button>
-              <button class="btn btn-default-ozel btn-sm"> Defaut Small</button>
               <button class="btn btn-default-ozel btn-xs"> Defaut xSmall</button>
             </div>
             <!-- Btn Default Özel -->
@@ -54,7 +53,6 @@
             <div class="col-md-12">
               <button class="btn btn-primary-ozel btn-lg"> Primary Large</button>
               <button class="btn btn-primary-ozel btn-md"> Primary Medium</button>
-              <button class="btn btn-primary-ozel btn-sm"> Primary Small</button>
               <button class="btn btn-primary-ozel btn-xs"> Primary xSmall</button>
             </div>
             <!-- Btn Default Özel -->
@@ -63,10 +61,9 @@
           <div class="row m-t-15">
             <!-- Btn Success Özel -->
             <div class="col-md-12">
-              <button class="btn btn-success-ozel btn-lg"> Primary Large</button>
-              <button class="btn btn-success-ozel btn-md"> Primary Medium</button>
-              <button class="btn btn-success-ozel btn-sm"> Primary Small</button>
-              <button class="btn btn-success-ozel btn-xs"> Primary xSmall</button>
+              <button class="btn btn-success-ozel btn-lg"> Success Large</button>
+              <button class="btn btn-success-ozel btn-md"> Success Medium</button>
+              <button class="btn btn-success-ozel btn-xs"> Success xSmall</button>
             </div>
             <!-- Btn Success Özel -->
           </div>
@@ -74,12 +71,21 @@
           <div class="row m-t-15">
             <!-- Btn Danger Özel -->
             <div class="col-md-12">
-              <button class="btn btn-danger-ozel btn-lg"> Primary Large</button>
-              <button class="btn btn-danger-ozel btn-md"> Primary Medium</button>
-              <button class="btn btn-danger-ozel btn-sm"> Primary Small</button>
-              <button class="btn btn-danger-ozel btn-xs"> Primary xSmall</button>
+              <button class="btn btn-danger-ozel btn-lg"> Danger Large</button>
+              <button class="btn btn-danger-ozel btn-md"> Danger Medium</button>
+              <button class="btn btn-danger-ozel btn-xs"> Danger xSmall</button>
             </div>
             <!-- Btn Danger Özel -->
+          </div>
+
+          <div class="row m-t-15">
+            <!-- Btn Danger-Outline Özel -->
+            <div class="col-md-12">
+              <button class="btn btn-danger-ozel-outline btn-lg"> DangerOutline Large</button>
+              <button class="btn btn-danger-ozel-outline btn-md"> DangerOutline Medium</button>
+              <button class="btn btn-danger-ozel-outline btn-xs"> DangerOutline xSmall</button>
+            </div>
+            <!-- Btn Danger-Outline Özel -->
           </div>
 
 
