buttonla ilgili sanırım bilmiyorum

--- a/src/app/Button/button.component.html
+++ b/src/app/Button/button.component.html
@@ -88,6 +88,19 @@
             <!-- Btn Danger-Outline Özel -->
           </div>
 
+          <div class="row m-t-15">
+            <!-- Btn Group -->
+            <div class="col-md-12">
+              <div class="btn-group m-b">
+                <button class="btn btn-danger-ozel"><i class="fa fa-trash-o"></i></button>
+                <button class="btn btn-danger-ozel-outline">Sil</button>
+              </div>
+            </div>
+            <!-- Btn Group -->
+          </div>
+
+
+
 
 
 
