--- a/src/app/musteri-detay/musteri-detay.component.html
+++ b/src/app/musteri-detay/musteri-detay.component.html
@@ -25,10 +25,15 @@
     <!-- Sol Detay -->
     <div class="col-md-8">
       <!-- Panel -->
-      <div class="panel panel-benim">
+      <div class="panel panel-light">
         <!-- Panel Header -->
         <div class="panel-heading">
-          <div class="panel-title"><span>Müşteri Detay</span></div>
+          <!-- Panel Left Block -->
+          <div class="panel-heading-left-block">
+            <span >Müşteri Detay </span>
+          </div>
+          <!-- Panel Heading Left Block -->
+
         </div>
         <!-- Panel Header -->
         <!-- Panel Body-->
@@ -178,13 +183,13 @@
       <div class="row">
         <div class="col-md-12">
           <!-- Panel -->
-          <div class="panel panel-benim">
+          <div class="panel panel-light">
             <!-- Panel Body-->
             <div class="panel-body">
               <div class="row">
                 <div class="col-md-6">
                   <div class="btn-group btn-block" dropdown>
-                    <a class="btn btn-white-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></a>
+                    <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
                     <ul dropdownMenu role="menu" aria-labelledby="single-button">
                       <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
                       <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
