--- a/src/app/Button/button.component.html
+++ b/src/app/Button/button.component.html
@@ -99,6 +99,23 @@
             <!-- Btn Group -->
           </div>
 
+          <div class="row m-t-15">
+            <!-- Btn Dropdown -->
+            <div class="col-md-6">
+              <div class="btn-group btn-block" dropdown>
+                <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
+                <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
+                  <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
+                  <li role="menuitem" class="active"><a class="dropdown-item" href="#">Another action</a></li>
+                  <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li class="divider dropdown-divider"></li>
+                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <!-- Btn Dropdown -->
+          </div>
+
 
 
 
