--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,9 @@
 @import "scss/Panel/Panel.scss";
 /* Button */
 @import "scss/Button/Button";
+
+/* Dropdown */
+@import "scss/Dropdown/dropdown.scss";
 body{
   font-family: 'Roboto', sans-serif;
   font-size:14px;
