list component eklendi

--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -6,6 +6,7 @@
       <li  class="active"><a routerLink="/musteriler"><i class="fa fa-address-book"></i><span>Müşteriler</span></a></li>
       <li><a routerLink="/panel"><i class="fa fa-hashtag"></i><span>Panel</span></a></li>
       <li><a routerLink="/button"><i class="fa fa-hashtag"></i><span>Button</span></a></li>
+      <li><a routerLink="/list"><i class="fa fa-hashtag"></i><span>List</span></a></li>
     </ul>
   </div>
 </div>
