müşteri listeleme eklendi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -26,23 +26,57 @@
 
     <div class="col-md-12">
       <div class="panel panel-light">
-        <!-- Panel Heading -->
-        <div class="panel-heading">
-          <!-- Panel Left Block -->
-          <div class="panel-heading-left-block">
-            <span> List </span>
-          </div>
-          <!-- Panel Heading Left Block -->
 
-        </div>
-        <!-- Panel Heading -->
         <div class="panel-body">
-
-
-
+          <div id="musteri-listele">
+            <!-- Müşteri Listele Header -->
+            <div class="musteri-listele-header">
+              <div class="musteri-listele-label-header">
+                <span>Adi / Şirket</span>
+              </div>
+              <div class="musteri-listele-label-header" style="float:right;padding-right: 10px">
+                <span>Bakiye</span>
+              </div>
+            </div>
+            <!-- Müşteri Listele Header -->
+            <!-- Müşteri Listele Body -->
+            <div id="musteri-listele-body">
+              <ul class="musteri-list">
+                <li>
+                  <a href="#">
+                    <!-- Sol Block -->
+                    <div class="musteri-list-sol-block">
+                      <!-- Kısa Ad -->
+                      <div class="musteri-list-kisa-ad img-circle">
+                        <span>AE</span>
+                      </div>
+                      <!-- Kısa Ad -->
+                      <!-- Tam Ad -->
+                      <div class="musteri-list-tam-ad">
+                        <span>Ahmet Elçik</span>
+                        <span>(554) 910 98 94</span>
+                      </div>
+                      <!-- Tam Ad -->
+                    </div>
+                    <!-- Sol Block -->
+                    <!-- Sağ Block -->
+                    <div class="musteri-list-sag-block">
+                      <!-- Bakiye -->
+                      <div class="musteri-list-bakiye">
+                        <span> - 250,00 <i class="fa fa-try"></i></span>
+                      </div>
+                      <!-- Bakiye -->
+                    </div>
+                    <!-- Sağ Block -->
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <!-- Müşteri Listele Body -->
+          </div>
         </div>
         <div class="panel-footer">
-
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque culpa cupiditate debitis eligendi et libero mollitia quasi quidem quis suscipit. Debitis enim ex non. Itaque laboriosam repellendus reprehenderit saepe voluptas?</p>
         </div>
       </div>
     </div>
