müşteri ekleme ve devamını göster yapıldı

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -24,10 +24,29 @@
 <div class="container-fluid m-l-230 m-t-15">
   <div class="row">
 
-    <div class="col-md-12">
+    <div class="col-md-3">
       <div class="panel panel-light">
 
-        <div class="panel-body">
+        <!-- Yeni Müşteri Ekle -->
+        <div class="musteri-ekle-block"  style="padding: 10px;">
+          <button class="btn btn-primary-ozel btn-block"><i class="fa fa-user-plus"></i> Yeni Müşteri </button>
+        </div>
+        <!-- Yeni Müşteri Ekle -->
+        <!-- Müşteri Ara -->
+        <div class="musteri-ara-block" style="padding: 10px;">
+          <form>
+            <input type="text" class="form-control" placeholder="Müşteri Ara...">
+            <button class="btn btn-success-ozel btn-block m-t-5"><i class="fa fa-search"></i> Ara</button>
+          </form>
+        </div>
+        <!-- Müşteri Ara -->
+      </div>
+    </div>
+
+    <div class="col-md-9">
+      <div class="panel panel-light" style="border-radius: 5px">
+
+        <div class="panel-body padding-0">
           <div id="musteri-listele">
             <!-- Müşteri Listele Header -->
             <div class="musteri-listele-header">
@@ -54,7 +73,91 @@
                       <!-- Tam Ad -->
                       <div class="musteri-list-tam-ad">
                         <span>Ahmet Elçik</span>
-                        <span>(554) 910 98 94</span>
+                        <span class="musteri-list-tam-ad-telefon">(554) 910 98 94</span>
+                      </div>
+                      <!-- Tam Ad -->
+                    </div>
+                    <!-- Sol Block -->
+                    <!-- Sağ Block -->
+                    <div class="musteri-list-sag-block">
+                      <!-- Bakiye -->
+                      <div class="musteri-list-bakiye">
+                        <span> - 250,00 <i class="fa fa-try"></i></span>
+                      </div>
+                      <!-- Bakiye -->
+                    </div>
+                    <!-- Sağ Block -->
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <!-- Sol Block -->
+                    <div class="musteri-list-sol-block">
+                      <!-- Kısa Ad -->
+                      <div class="musteri-list-kisa-ad img-circle">
+                        <span>AE</span>
+                      </div>
+                      <!-- Kısa Ad -->
+                      <!-- Tam Ad -->
+                      <div class="musteri-list-tam-ad">
+                        <span>Ahmet Elçik</span>
+                        <span class="musteri-list-tam-ad-telefon">(554) 910 98 94</span>
+                      </div>
+                      <!-- Tam Ad -->
+                    </div>
+                    <!-- Sol Block -->
+                    <!-- Sağ Block -->
+                    <div class="musteri-list-sag-block">
+                      <!-- Bakiye -->
+                      <div class="musteri-list-bakiye">
+                        <span> - 250,00 <i class="fa fa-try"></i></span>
+                      </div>
+                      <!-- Bakiye -->
+                    </div>
+                    <!-- Sağ Block -->
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <!-- Sol Block -->
+                    <div class="musteri-list-sol-block">
+                      <!-- Kısa Ad -->
+                      <div class="musteri-list-kisa-ad img-circle">
+                        <span>AE</span>
+                      </div>
+                      <!-- Kısa Ad -->
+                      <!-- Tam Ad -->
+                      <div class="musteri-list-tam-ad">
+                        <span>Ahmet Elçik</span>
+                        <span class="musteri-list-tam-ad-telefon">(554) 910 98 94</span>
+                      </div>
+                      <!-- Tam Ad -->
+                    </div>
+                    <!-- Sol Block -->
+                    <!-- Sağ Block -->
+                    <div class="musteri-list-sag-block">
+                      <!-- Bakiye -->
+                      <div class="musteri-list-bakiye">
+                        <span> - 250,00 <i class="fa fa-try"></i></span>
+                      </div>
+                      <!-- Bakiye -->
+                    </div>
+                    <!-- Sağ Block -->
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <!-- Sol Block -->
+                    <div class="musteri-list-sol-block">
+                      <!-- Kısa Ad -->
+                      <div class="musteri-list-kisa-ad img-circle">
+                        <span>AE</span>
+                      </div>
+                      <!-- Kısa Ad -->
+                      <!-- Tam Ad -->
+                      <div class="musteri-list-tam-ad">
+                        <span>Ahmet Elçik</span>
+                        <span class="musteri-list-tam-ad-telefon">(554) 910 98 94</span>
                       </div>
                       <!-- Tam Ad -->
                     </div>
@@ -75,6 +178,11 @@
             <!-- Müşteri Listele Body -->
           </div>
         </div>
+        <!-- Panel Footer -->
+        <div class="panel-footer" style="text-align: center">
+          <button class="btn btn-primary-ozel"><i class="fa fa-spinner"></i> Daha Fazla Göster</button>
+        </div>
+        <!-- Panel Footer -->
       </div>
     </div>
 
@@ -82,4 +190,3 @@
 </div>
 <!-- Genel -->
 
-s
