--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,9 @@
 /* Table */
 @import "scss/Table/musteri_listele_table.scss";
 
+/* Sayfa Başlık */
+@import "scss/SayfaBaslik/sayfa-baslik.scss";
+
 
 body{
   font-family: 'Roboto', sans-serif;
