form component eklendi

--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -7,6 +7,7 @@
       <li><a routerLink="/panel"><i class="fa fa-hashtag"></i><span>Panel</span></a></li>
       <li><a routerLink="/button"><i class="fa fa-hashtag"></i><span>Button</span></a></li>
       <li><a routerLink="/list"><i class="fa fa-hashtag"></i><span>List</span></a></li>
+      <li><a routerLink="/form"><i class="fa fa-hashtag"></i><span>Form</span></a></li>
     </ul>
   </div>
 </div>
