form panel eklendi

--- a/src/app/Form/form.component.html
+++ b/src/app/Form/form.component.html
@@ -24,9 +24,31 @@
 <div class="container-fluid m-l-230 m-t-15">
   <div class="row">
     <div class="col-md-12">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur corporis deleniti dolorem eveniet fugit omnis perferendis quibusdam quos sunt tenetur? Cupiditate hic impedit libero maiores minima quasi sed sunt. Impedit.gg
-      </p>
+
+      <!-- Panel -->
+      <div class="panel panel-light">
+        <!-- Panel Heading -->
+        <div class="panel-heading">
+          <!-- Panel Left Block -->
+          <div class="panel-heading-left-block">
+            <span> Form  </span>
+          </div>
+          <!-- Panel Heading Left Block -->
+        </div>
+        <!-- Panel Heading -->
+        <!-- Panel Body -->
+        <div class="panel-body">
+          body
+        </div>
+        <!-- Panel Body -->
+        <!-- Panel Footer -->
+        <div class="panel-footer">
+          footer
+        </div>
+        <!-- Panel Footer -->
+      </div>
+      <!-- Panel -->
+
     </div>
   </div>
 </div>
