--- a/src/app/Form/form.component.html
+++ b/src/app/Form/form.component.html
@@ -38,7 +38,27 @@
         <!-- Panel Heading -->
         <!-- Panel Body -->
         <div class="panel-body">
-          body
+
+          <!-- Form -->
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+              <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+            </div>
+
+            <div class="form-group">
+              <textarea class="form-control" placeholder="Birşeyler yaz..."></textarea>
+              <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+            </div>
+          </form>
+          <!-- Form -->
+
         </div>
         <!-- Panel Body -->
         <!-- Panel Footer -->
