form input text eklendi

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,9 @@
 /* Sayfa Başlık */
 @import "scss/SayfaBaslik/sayfa-baslik.scss";
 
+/* Form */
+@import "scss/Form/form.scss";
+
 
 body{
   font-family: 'Roboto', sans-serif;
