--- a/src/app/Form/form.component.html
+++ b/src/app/Form/form.component.html
@@ -42,8 +42,8 @@
           <!-- Form -->
           <form>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+              <label for="exampleInputEmail1" class="form-style-ozel-label">Email address</label>
+              <input type="email" class="form-control form-style-ozel" id="exampleInputEmail1" placeholder="Email">
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
             <div class="form-group">
