--- a/src/app/Form/form.component.html
+++ b/src/app/Form/form.component.html
@@ -42,13 +42,14 @@
           <!-- Form -->
           <form>
             <div class="form-group">
-              <label for="exampleInputEmail1" class="form-style-ozel-label">Email address</label>
-              <input type="email" class="form-control form-style-ozel" id="exampleInputEmail1" placeholder="Email">
+              <label for="labelEmailAdresi" class="form-style-ozel-label">E-Mail Adresi</label>
+              <input type="email" class="form-control form-style-ozel" id="labelEmailAdresi" placeholder="Email">
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
+
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <label for="labelSifre" class="form-style-ozel-label">Şifre</label>
+              <input type="password" class="form-control form-style-ozel" id="labelSifre" placeholder="Email">
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
 
