--- a/src/scss/Form/form.scss
+++ b/src/scss/Form/form.scss
@@ -12,10 +12,14 @@
 
 /* Form Input Label */
 .form-style-ozel-label{
-  font-weight:300;
+  font-weight: 500;
   color: #656565;
 }
 
+/* Help Block */
 .help-block{
   font-size: 12px;
+  font-weight:100;
 }
+
+/* TextArea */
