--- a/src/app/Form/form.component.html
+++ b/src/app/Form/form.component.html
@@ -47,14 +47,14 @@
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
 
-            <div class="form-group">
-              <label for="labelSifre" class="form-style-ozel-label">Şifre</label>
+            <div class="form-group has-success">
+              <label for="labelSifre" class="control-label form-style-ozel-label">Şifre</label>
               <input type="password" class="form-control form-style-ozel" id="labelSifre" placeholder="Email">
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
 
             <div class="form-group">
-              <textarea class="form-control" placeholder="Birşeyler yaz..."></textarea>
+              <textarea class="form-control form-style-ozel" placeholder="Birşeyler yaz..."></textarea>
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
           </form>
