--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -35,7 +35,7 @@
         <!-- Müşteri Ara -->
         <div class="musteri-ara-block" style="padding: 10px;">
           <form>
-            <input type="text" class="form-control" placeholder="Müşteri Ara...">
+            <input type="text" class="form-control form-style-ozel" placeholder="Müşteri Ara...">
             <button class="btn btn-success-ozel btn-block m-t-5"><i class="fa fa-search"></i> Ara</button>
           </form>
         </div>
