--- a/src/app/Form/form.component.html
+++ b/src/app/Form/form.component.html
@@ -42,7 +42,7 @@
           <!-- Form -->
           <form>
             <div class="form-group">
-              <label for="labelEmailAdresi" class="form-style-ozel-label">E-Mail Adresi</label>
+              <label for="labelEmailAdresi" class="control-label form-style-ozel-label">E-Mail Adresi</label>
               <input type="email" class="form-control form-style-ozel" id="labelEmailAdresi" placeholder="Email">
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
@@ -53,8 +53,9 @@
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
 
-            <div class="form-group">
-              <textarea class="form-control form-style-ozel" placeholder="Birşeyler yaz..."></textarea>
+            <div class="form-group has-error">
+              <label for="labelTextarea" class="control-label form-style-ozel-label">Şifre</label>
+              <textarea id="labelTextarea" class="form-control form-style-ozel" placeholder="Birşeyler yaz..."></textarea>
               <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
             </div>
           </form>
