--- a/src/scss/Table/musteri_listele_table.scss
+++ b/src/scss/Table/musteri_listele_table.scss
@@ -45,11 +45,11 @@
         margin-right: 10px;
         & span{
           font-size: 16px;
-          color: #666;
+          color: #9c9c9c;
           position: absolute;
           top: 23px;
-          left: 25px;
-          font-weight:100;
+          left: 24px;
+          font-weight:500;
         }
       }
       & .musteri-list-tam-ad{
