--- a/src/app/Form/form.component.html
+++ b/src/app/Form/form.component.html
@@ -64,8 +64,8 @@
         </div>
         <!-- Panel Body -->
         <!-- Panel Footer -->
-        <div class="panel-footer">
-          footer
+        <div class="panel-footer" style="text-align: right">
+          <button class="btn btn-success-ozel btn-lg"><i class="fa fa-cloud-upload"></i> Kaydet</button>
         </div>
         <!-- Panel Footer -->
       </div>
