--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -180,7 +180,7 @@
         </div>
         <!-- Panel Footer -->
         <div class="panel-footer" style="text-align: center">
-          <button class="btn btn-primary-ozel"><i class="fa fa-spinner"></i> Daha Fazla Göster</button>
+          <button class="btn btn-primary-ozel"><i class="fa fa-spinner fa-spin fa-lg"></i> Daha Fazla Göster</button>
         </div>
         <!-- Panel Footer -->
       </div>
