--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <!-- Page Header -->
       <div class="page-head-title">
-        <h2>Panel</h2>
+        <h2>Tab</h2>
       </div>
       <!-- Page Header -->
       <!-- Breadcumb -->
@@ -28,23 +28,23 @@
       <div class="panel panel-light">
         <!-- Panel Heading -->
         <div class="panel-heading">
-            <!-- Panel Left Block -->
-            <div class="panel-heading-left-block">
-              <span>Müşteri Detay </span>
-            </div>
-            <!-- Panel Heading Left Block -->
-            <!-- Panel Heading Right Block -->
-            <div class="panel-heading-right-block">
-              <a href="#" class="btn btn-danger btn-xs">Button 1</a>
-              <a href="#" class="btn btn-success btn-xs">Button 2</a>
-            </div>
-            <!-- Panel Right Block -->
+          <!-- Panel Left Block -->
+          <div class="panel-heading-left-block">
+            <span> Tab </span>
+          </div>
+          <!-- Panel Heading Left Block -->
+          <!-- Panel Heading Right Block -->
+          <div class="panel-heading-right-block">
+            <a href="#" class="btn btn-danger btn-xs">Button 1</a>
+            <a href="#" class="btn btn-success btn-xs">Button 2</a>
+          </div>
+          <!-- Panel Right Block -->
         </div>
         <!-- Panel Heading -->
         <div class="panel-body">
-         <p>
-           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque dolor ea esse facilis nemo nisi nulla possimus quam quo sequi! Cumque dolor ducimus expedita nihil recusandae rem repudiandae sint voluptas?
-         </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque dolor ea esse facilis nemo nisi nulla possimus quam quo sequi! Cumque dolor ducimus expedita nihil recusandae rem repudiandae sint voluptas?
+          </p>
         </div>
         <div class="panel-footer">
           <!-- Panel Footer Left Block -->
@@ -55,9 +55,9 @@
           <!-- Panel Footer Right Block -->
           <div class="panel-footer-right-block">
             <!--<div class="btn-group" role="group" aria-label="...">-->
-              <!--<button type="button" class="btn btn-default">Left</button>-->
-              <!--<button type="button" class="btn btn-default">Middle</button>-->
-              <!--<button type="button" class="btn btn-default">Right</button>-->
+            <!--<button type="button" class="btn btn-default">Left</button>-->
+            <!--<button type="button" class="btn btn-default">Middle</button>-->
+            <!--<button type="button" class="btn btn-default">Right</button>-->
             <!--</div>-->
           </div>
           <!-- Panel Footer Right Block -->
