--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -8,6 +8,7 @@
       <li><a routerLink="/button"><i class="fa fa-hashtag"></i><span>Button</span></a></li>
       <li><a routerLink="/list"><i class="fa fa-hashtag"></i><span>List</span></a></li>
       <li><a routerLink="/form"><i class="fa fa-hashtag"></i><span>Form</span></a></li>
+      <li><a routerLink="/tab"><i class="fa fa-hashtag"></i><span>Tab</span></a></li>
     </ul>
   </div>
 </div>
