tab stili yapıldı

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,8 @@
 /* Form */
 @import "scss/Form/form.scss";
 
+/* Tab */
+@import "scss/Tab/tab.scss";
 
 body{
   font-family: 'Roboto', sans-serif;
