--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -24,46 +24,31 @@
 <div class="container-fluid m-l-230 m-t-15">
   <div class="row">
 
-    <div class="col-md-12">
+    <div class="col-md-4">
+      <!-- Panel -->
       <div class="panel panel-light">
-        <!-- Panel Heading -->
-        <div class="panel-heading">
-          <!-- Panel Left Block -->
-          <div class="panel-heading-left-block">
-            <span> Tab </span>
-          </div>
-          <!-- Panel Heading Left Block -->
-          <!-- Panel Heading Right Block -->
-          <div class="panel-heading-right-block">
-            <a href="#" class="btn btn-danger btn-xs">Button 1</a>
-            <a href="#" class="btn btn-success btn-xs">Button 2</a>
-          </div>
-          <!-- Panel Right Block -->
+        <!-- Panel Body -->
+        <div class="panel-body padding-0">
+          <!-- Tab -->
+          <tabset>
+            <tab heading="Tab1" customClass="tab-ozel">
+              <div class="tab-page-content">
+                <!-- content-->
+                tab1 içerik
+              </div>
+            </tab>
+            <tab heading="Tab2" customClass="tab-ozel">
+              <div class="tab-page-content">
+                <!-- content-->
+                tab2 içerik
+              </div>
+            </tab>
+          </tabset>
+          <!-- Tab -->
         </div>
-        <!-- Panel Heading -->
-        <div class="panel-body">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque dolor ea esse facilis nemo nisi nulla possimus quam quo sequi! Cumque dolor ducimus expedita nihil recusandae rem repudiandae sint voluptas?
-          </p>
-        </div>
-        <div class="panel-footer">
-          <!-- Panel Footer Left Block -->
-          <div class="panel-footer-left-block">
-            <span>Ekleyen Kullanıcı : <a href="#">Ahmet Elçik</a></span>
-          </div>
-          <!-- Panel Footer Left Block -->
-          <!-- Panel Footer Right Block -->
-          <div class="panel-footer-right-block">
-            <!--<div class="btn-group" role="group" aria-label="...">-->
-            <!--<button type="button" class="btn btn-default">Left</button>-->
-            <!--<button type="button" class="btn btn-default">Middle</button>-->
-            <!--<button type="button" class="btn btn-default">Right</button>-->
-            <!--</div>-->
-          </div>
-          <!-- Panel Footer Right Block -->
-          <div class="clearfix"></div>
-        </div>
+        <!-- Panel Body -->
       </div>
+      <!-- Panel -->
     </div>
 
   </div>
