--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -33,8 +33,17 @@
           <tabset>
             <tab heading="Tab1" customClass="tab-ozel">
               <div class="tab-page-content">
-                <!-- content-->
-                tab1 içerik
+                <ul class="not-listele-tab">
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                    </a>
+                  </li>
+                </ul>
               </div>
             </tab>
             <tab heading="Tab2" customClass="tab-ozel">
