--- a/src/scss/Tab/tab.scss
+++ b/src/scss/Tab/tab.scss
@@ -40,7 +40,7 @@ li.tab-ozel{
       top: 10px;
       left: 10px;
       border-radius: 5px;
-      padding: 10px;
+      padding: 10px!important;
     }
   }
 }
