--- a/src/scss/Tab/tab.scss
+++ b/src/scss/Tab/tab.scss
@@ -32,8 +32,24 @@ li.tab-ozel{
 .not-listele-tab{
   list-style: none;
   padding: 0;
+  & li {
+    border-bottom: 1px solid #f6f6f6;
+    &:hover{
+      background: #f9f9f9;
+    }
+    & a{
+      display: block;
+      padding: 13px;
+    }
+  }
+  & a{
+    text-decoration: none;
+  }
+  /* İcon */
   & .tab-page-content-icon-block{
     display: inline-block;
+    float: left;
+    margin-right: 5px;
     & i{
       background: #eee;
       color: #a39f9d;
@@ -43,4 +59,24 @@ li.tab-ozel{
       padding: 10px!important;
     }
   }
+
+  & .tab-page-content-text{
+    display: inline-block;
+    width: 250px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    & p{
+      padding:0;
+      margin: 0;
+      color: #333;
+      font-size: 12px;
+    }
+
+    & span{
+      color: #888888;
+      font-size: 11px;
+    }
+  }
+
 }
