"tab notları listeleme eklendi"

--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -47,7 +47,81 @@
                         <span>12 Aralık 2016 / Ahmet Elçik</span>
                       </div>
                       <!-- Text -->
-
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
                     </a>
                   </li>
                 </ul>
