"tab ödeme listelem eklendi"

--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -31,7 +31,22 @@
         <div class="panel-body padding-0">
           <!-- Tab -->
           <tabset>
-            <tab heading="Tab1" customClass="tab-ozel">
+            <!-- Ödemeler -->
+            <tab heading="Ödemeler" customClass="tab-ozel">
+              <div class="tab-page-content">
+                <ul class="odeme-listele">
+                  <li>
+                    <a href="#">
+
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </tab>
+            <!-- Ödemeler -->
+
+            <!-- Notlar -->
+            <tab heading="Notlar" customClass="tab-ozel">
               <div class="tab-page-content">
                 <ul class="not-listele-tab">
                   <li>
@@ -127,12 +142,7 @@
                 </ul>
               </div>
             </tab>
-            <tab heading="Tab2" customClass="tab-ozel">
-              <div class="tab-page-content">
-                <!-- content-->
-                tab2 içerik
-              </div>
-            </tab>
+            <!-- Notlar -->
           </tabset>
           <!-- Tab -->
         </div>
